--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "packages/holymotion"]
 	path = packages/holymotion
 	url = https://github.com/PythonNut/evil-easymotion
+[submodule "packages/shelldon"]
+	path = packages/shelldon
+	url = git@github.com:Overdr0ne/shelldon.git
